Fix dark mode background color is using that in custom light theme

--- a/authui/src/authflowv2/components/widget.css
+++ b/authui/src/authflowv2/components/widget.css
@@ -17,6 +17,11 @@
     }
   }
 
+  :root.dark {
+    --widget__bg-color: var(--color-bg-base);
+    --widget__bg-image: ;
+  }
+
   .widget {
     width: var(--widget__width);
     max-width: var(--widget__max-width);
